[package]
name = "clock"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>", "Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2021"

[dependencies]
iced = { version = "0.5.2", features = ["canvas", "tokio", "debug"] }
time = { version = "0.3.5", features = ["local-offset"] }
