[package]
name = "clock"
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2021"
rust-version = "1.88"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["wgpu", "tiny-skia", "tokio", "canvas", "x11", "wayland"] }
chrono = "0.4.24"

# Google OAuth/OIDC and Calendar integration
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
webbrowser = "1.0"
dirs = "5.0"
url = "2.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }